[tool.poetry]
name = "langchain-chatbot"
version = "0.1.0"
description = ""
authors = ["David Peterson <34923485+Haste171@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.338"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
