[tool.poetry]
name = "langchain-chatbot"
version = "0.1.0"
description = ""
authors = ["David Peterson <34923485+Haste171@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.0.338"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"
tiktoken = "^0.5.1"
qdrant-client = "^1.6.9"
pip = "^23.3.1"
install = "^1.3.5"
lanarky = "^0.7.17"
fastapi = "^0.104.1"
openai = "0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
